@@ -2,6 +2,8 @@
 * renamed the program to keeper to not confuse people with the original etckeeper
 * fixed bug: modules were getting sourced the wrong path /usr/local/sbin/keeper_modules
 * fixed bug: #37 when adding excludes before init where issued script complains git errors
+* check_perms: when script finds a line which points to a data or directory no longer present in your /etc, the line is delete from your content.lst
+
 
 === 0.2.2.2 - 28.06.2012 ===
 * corrected: some comments and journal entries grammar and spelling
